src/tests/zustand-pick-from/syntax-errors/pick-from-path-array-expressions.js
const user = useGlobalStore.pickFrom(["order", index + 1]);
